@@ -30,6 +30,7 @@
 - change walk_tree() to take ap.
 - add negative cache lookup to hesiod lookup.
 - fix external env configure.
+- make autofs(5) consistent with auto.master(5).
 
 17/10/2013 autofs-5.0.8
 =======================
